--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libde265 (1.0.8-1deepin0) unstable; urgency=medium
+
+  * No source change upload against GCC 12.
+
+ -- Tianyu Chen <sweetyfish@deepin.org>  Thu, 19 Sep 2024 22:53:22 +0800
+
 libde265 (1.0.8-1) unstable; urgency=medium
 
   * Update to debhelper compat level 13 and add debian/not-installed
